# WEB_HW-13_1

Django/django_project/: pyproject.toml
Django/django_project/docker-mongo/: docker-compose.yaml
Django/django_project/docker-postgress/: docker-compose.yaml
Django/django_project/hw_project/: db.sqlite3  manage.py
Django/django_project/hw_project/hw_project/: asgi.py  settings.py  urls.py  wsgi.py
Django/django_project/hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
Django/django_project/hw_project/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
Django/django_project/hw_project/quotes/static/quotes/: style.css
Django/django_project/hw_project/quotes/templates/quotes/: author.html  base.html  index.html  tag.html
Django/django_project/hw_project/quotes/templatetags/: extract.py  extract_tags.py
Django/django_project/hw_project/users/: forms.py  models.py  urls.py  views.py
Django/django_project/hw_project/users/migrations/: 0001_initial.py
Django/django_project/hw_project/users/templates/users/: signup.html
Django/django_project/hw_project/utils/: add_quotes_to_mongo.py  migration.py
