[tool.poetry]
name = "django project"
version = "0.1.0"
description = ""
authors = ["Zpfamily <65131398+Zpfamily@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
pymongo = "^4.6.3"
paginator = "^0.5.1"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
